--- a/src/components/common/Head.astro
+++ b/src/components/common/Head.astro
@@ -1,9 +1,10 @@
 ---
+// Head.astro
 interface Props {
   title?: string;
   description?: string;
   image?: string;
-  url?: string; // Added to define `og:url` and `twitter:url` dynamically
+  url?: string;
 }
 
 const {
