--- a/src/components/common/Logo.astro
+++ b/src/components/common/Logo.astro
@@ -1,6 +1,6 @@
 ---
-// Define props for Logo.astro
-const { svgClasses = "" } = Astro.props; // Default to empty string if no classes are provided
+// Logo.astro
+const { svgClasses = '' } = Astro.props;
 ---
 
 <div class="group relative">
