--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -146,7 +146,10 @@ const lang = "pl";
     reverse
   >
     <span slot="heading">
-      A Greener Future: Mends' Commitment to Sustainability
+      A Greener Future: Mends' Commitment to <span
+      class="font-display uppercase text-transparent bg-gradient-to-b from-matisse via-hippie-blue to-pale-leaf bg-clip-text"
+      >Sustainability</span
+    >
     </span>
     <span slot="paragraph">
       Mends prioritizes Sustainability, <strong
@@ -163,7 +166,10 @@ const lang = "pl";
       <h2
         class="text-2xl md:text-3xl lg:text-4xl font-bold mb-6 text-hippie-blue"
       >
-        Our Patient-Centric Approach
+        Our <span
+        class="font-display uppercase text-transparent bg-gradient-to-b from-apricot via-brandy to-frost bg-clip-text"
+        >Patient-Centric</span
+      > Approach
       </h2>
       <div
         class="grid grid-cols-1 md:grid-cols-3 justify-center content-center text-lg md:text-xl text-rhino gap-12"
