--- a/src/components/sections/Feature.astro
+++ b/src/components/sections/Feature.astro
@@ -14,7 +14,7 @@ const { id, imageUrl, imageAlt, reverse = false } = Astro.props as Props;
 <section class={`py-12 md:py-24 ${reverse ? "" : "bg-white"}`} id={id}>
   <div class="container mx-auto px-4">
     <div
-      class={`flex ${reverse ? "md:flex-row-reverse" : "flex-wrap"} items-center justify-center`}
+      class={`flex flex-wrap ${reverse ? "flex-row md:flex-row-reverse" : "flex-row "} items-center justify-center`}
     >
       <div class="w-full md:w-1/2 mb-8 md:mb-0 max-w-lg">
         <h2
@@ -31,7 +31,7 @@ const { id, imageUrl, imageAlt, reverse = false } = Astro.props as Props;
           <img
             src={imageUrl}
             alt={imageAlt}
-            class="max-w-xs md:max-w-sm lg:max-w-md"
+            class="max-w-xs md:max-w-sm lg:max-w-md w-full h-full aspect-square"
           />
         )}
       </div>
