--- a/src/components/common/Head.astro
+++ b/src/components/common/Head.astro
@@ -27,8 +27,12 @@ import Unfont from 'unplugin-fonts/astro/component.astro';
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 	<meta
 		name="viewport"
-		content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+		content="width=device-width, initial-scale=1.0"
 	/>
+<!--	<meta
+		name="viewport"
+		content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+	/>  -->
 	<meta name="generator" content="Astro" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content={url} />
