--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,13 +22,13 @@ const lang = "pl";
     buttonLink="#values"
     id="home"
   >
-    <div slot="header">
-      <div
+    <span slot="header">
+      <span
         class="font-display uppercase text-transparent bg-gradient-to-b from-matisse via-hippie-blue to-pale-leaf bg-clip-text"
       >
         Transforming
-      </div> Healthcare with Heart and Innovation
-    </div>
+      </span> Healthcare with Heart and Innovation
+    </span>
      At Mends, we're <strong>leveraging AI and telemedicine</strong> to bring
     you closer to your health goals, wherever you are.
   </HeroSection>
