--- a/src/components/sections/HeroSection.astro
+++ b/src/components/sections/HeroSection.astro
@@ -21,7 +21,7 @@ const { imageAlt, imageUrl, buttonText, buttonLink, id } = Astro.props;
 		<p class="text-xl md:text-2xl mb-8 text-rhino"><slot /></p>
 		<a
 			href={buttonLink}
-			class="inline-block bg-apricot text-white text-lg md:text-xl font-bold py-2 px-6 rounded-full hover:bg-hippie-blue transition duration-300"
+			class="inline-block bg-matisse text-white text-bold text-lg md:text-xl font-bold py-2 px-6 rounded-full hover:bg-apricot transition duration-300"
 			>{buttonText}</a
 		>
 	</div>
