--- a/src/components/common/Main.astro
+++ b/src/components/common/Main.astro
@@ -3,7 +3,7 @@
 ---
 
 <main
-  class="col-span-2 overflow-scroll shadow-xl rounded-3xl bg-hippie-blue-50 no-scrollbar scroll-smooth"
+  class="overflow-scroll shadow-xl rounded-3xl bg-hippie-blue-50 no-scrollbar scroll-smooth"
   :class="showNav ? 'opacity-0' : ''"
   x-transition.opacity
   x-ref="mainContainer"
