--- a/src/components/common/NavigationButton.astro
+++ b/src/components/common/NavigationButton.astro
@@ -6,7 +6,7 @@ interface Props {
 const { svgClasses = '' } = Astro.props;
 ---
 
-<div class="mt-auto p-3 md:p-6">
+<div class="mt-auto">
   <div class="relative group">
     <button class="block nav-button" @click="showNav = !showNav" x-cloak>
       <div
