--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,40 +1,47 @@
 ---
-import Head from "../components/common/Head.astro";
-import Header from "../components/common/Header.astro";
-import Footer from "../components/common/Footer.astro";
-import Main from "../components/common/Main.astro";
-import Navigation from "../components/common/Navigation.astro";
-import NavigationButton from "../components/common/NavigationButton.astro";
+import Head from '../components/common/Head.astro';
+import Header from '../components/common/Header.astro';
+import Footer from '../components/common/Footer.astro';
+import Main from '../components/common/Main.astro';
+import Navigation from '../components/common/Navigation.astro';
+import NavigationButton from '../components/common/NavigationButton.astro';
 
 interface LayoutProps {
-  title: string;
-  description: string;
-  lang: string;
-  navActive?: boolean;
-  navLinks?: { text: string; href: string }[];
+	title: string;
+	description: string;
+	lang: string;
+	navActive?: boolean;
+	navLinks?: { text: string; href: string }[];
 }
 
-const { title, description, lang, navActive = true, navLinks = []} = Astro.props as LayoutProps;
+const {
+	title,
+	description,
+	lang,
+	navActive = true,
+	navLinks = [],
+} = Astro.props as LayoutProps;
 ---
 
 <html lang={lang}>
-  <Head title={title} description={description} />
-  <body
-    x-data="{ showNav: false, navStyle: '', updateNavStyle() { const mainContainer = this.$refs.mainContainer; if (mainContainer) { this.navStyle = `width: ${mainContainer.offsetWidth}px; height: ${mainContainer.offsetHeight}px; top: ${mainContainer.offsetTop}px; left: ${mainContainer.offsetLeft}px;`;}}}"
-    class="container mx-auto"
-    x-init="updateNavStyle()"
-    @resize.window="updateNavStyle()"
-  >
-    <div
-      class="h-full container w-full fixed grid grid-rows-[fit-content(100%)_1fr_fit-content(100%)] grid-cols-[1fr_auto] grid-flow-row gap-0 bg-white"
-    >
-      <Header svgClasses="h-[38px] md:h-[62px]" />
-      {navActive && <NavigationButton svgClasses="h-[18px] md:h-[29px]" />}
-      {navActive && <Navigation navLinks={navLinks} />}
-      <Main>
-        <slot />
-      </Main>
-      <Footer />
-    </div>
-  </body>
+	<Head title={title} description={description} />
+	<body
+		x-data="{ showNav: false, navStyle: '', updateNavStyle() { const mainContainer = this.$refs.mainContainer; if (mainContainer) { this.navStyle = `width: ${mainContainer.offsetWidth}px; height: ${mainContainer.offsetHeight}px; top: ${mainContainer.offsetTop}px; left: ${mainContainer.offsetLeft}px;`;}}}"
+		class="container mx-auto"
+		x-init="updateNavStyle()"
+		@resize.window="updateNavStyle()"
+	>
+		<div
+			class="h-full container w-full fixed grid grid-rows-[fit-content(100%)_1fr_fit-content(100%)] grid-cols-[1fr] grid-flow-row gap-0 bg-white"
+		>
+			<Header svgClasses="h-[38px] md:h-[62px]">
+				{navActive && <NavigationButton svgClasses="h-[18px] md:h-[29px]" />}
+				{navActive && <Navigation navLinks={navLinks} />}
+			</Header>
+			<Main>
+				<slot />
+			</Main>
+			<Footer />
+		</div>
+	</body>
 </html>
