--- a/src/components/common/Footer.astro
+++ b/src/components/common/Footer.astro
@@ -1,7 +1,7 @@
 ---
 // Footer.astro
 ---
-<footer class="">
+<footer class="font-display uppercase text-rhino">
   <div class="flex justify-between items-center m-3 md:m-6">
     <div>
       <p class="text-sm">© 2024 Mends OÜ. Tallin, Estonia.</p>
