--- a/src/components/sections/Feature.astro
+++ b/src/components/sections/Feature.astro
@@ -31,7 +31,7 @@ const { id, imageUrl, imageAlt, reverse = false } = Astro.props as Props;
           <img
             src={imageUrl}
             alt={imageAlt}
-            class="max-w-xs md:max-w-sm lg:max-w-md w-full h-full aspect-square"
+            class="max-w-xs md:max-w-sm lg:max-w-md w-full h-full aspect-square px-8"
           />
         )}
       </div>
