--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const lang = "pl";
 <Layout title={title} description={description} navLinks={navLinks} lang={lang}>
   <HeroSection
     imageAlt="Transforming Healthcare"
-    imageUrl="/images/landing-hero-01.svg"
+    imageUrl="/images/rocket_3904299.svg"
     buttonText="Discover Our Vision"
     buttonLink="#values"
     id="home"
@@ -35,7 +35,7 @@ const lang = "pl";
 
   <Feature
     id="values"
-    imageUrl="/images/landing-values-01.svg"
+    imageUrl="/images/shooting-star_9283234.svg"
     imageAlt="Our Values"
   >
     <span slot="heading">
@@ -56,7 +56,7 @@ const lang = "pl";
 
   <Feature
     id="motivation"
-    imageUrl="/images/landing-motivation-01.svg"
+    imageUrl="/images/bioenergy_9569721.svg"
     imageAlt="Motivation"
     reverse
   >
@@ -79,7 +79,7 @@ const lang = "pl";
 
   <Feature
     id="empathy"
-    imageUrl="/images/landing-empathy-01.svg"
+    imageUrl="/images/trust_10524023.svg"
     imageAlt="Empathy"
   >
     <span slot="heading">
@@ -101,7 +101,7 @@ const lang = "pl";
 
   <Feature
     id="nimblesness"
-    imageUrl="/images/landing-nimblesness-01.svg"
+    imageUrl="/images/shuffle_5363661.svg"
     imageAlt="Nimbleness"
     reverse
   >
@@ -123,7 +123,7 @@ const lang = "pl";
 
   <Feature
     id="diversity"
-    imageUrl="/images/landing-diversity-01.svg"
+    imageUrl="/images/diversity_10415331.svg"
     imageAlt="Diversity"
   >
     <span slot="heading"> Embracing <span
@@ -141,7 +141,7 @@ const lang = "pl";
 
   <Feature
     id="sustainability"
-    imageUrl="/images/landing-sustainability-01.svg"
+    imageUrl="/images/global-connection_9757845.svg"
     imageAlt="Sustainability"
     reverse
   >
