--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -12,7 +12,7 @@ const navActive = false;
 	>
 		<div class="max-w-md mx-auto">
 			<img
-				src="/images/404.svg"
+				src="/images/galaxy_2909555.svg"
 				alt="Lost in Healthcare"
 				class="max-w-sm mx-auto mb-8 p-10"
 			/>
