--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,7 +32,7 @@ const {
 		@resize.window="updateNavStyle()"
 	>
 		<div
-			class="h-full container w-full fixed grid grid-rows-[fit-content(100%)_1fr_fit-content(100%)] grid-cols-[1fr] grid-flow-row gap-0 bg-white"
+			class="h-full container w-full fixed grid grid-rows-[fit-content(100%)_1fr_fit-content(100%)] grid-cols-[1fr] grid-flow-row gap-0"
 		>
 			<Header svgClasses="h-[38px] md:h-[62px]">
 				{navActive && <NavigationButton svgClasses="h-[18px] md:h-[29px]" />}
