--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -161,59 +161,6 @@ const lang = "pl";
     </span>
   </Feature>
 
-  <section class="py-12 md:py-24 bg-white">
-    <div class="container mx-auto px-12 text-center">
-      <h2
-        class="text-2xl md:text-3xl lg:text-4xl font-bold mb-6 text-hippie-blue"
-      >
-        Our <span
-        class="font-display uppercase text-transparent bg-gradient-to-b from-apricot via-brandy to-frost bg-clip-text"
-        >Patient-Centric</span
-      > Approach
-      </h2>
-      <div
-        class="grid grid-cols-1 md:grid-cols-3 justify-center content-center text-lg md:text-xl text-rhino gap-12"
-      >
-        <div
-          class="step p-10 rounded-full aspect-square shadow-lg relative flex flex-col justify-center"
-        >
-          <div
-            class="text-6xl md:text-8xl leading-0 font-bold w-full text-hippie-blue"
-          >
-            1
-          </div>
-          <h3 class="font-semibold mt-4">Sign Up</h3>
-          <p>Begin your health journey with our simple sign-up process.</p>
-        </div>
-        <div
-          class="step p-10 rounded-full aspect-square shadow-lg relative flex flex-col justify-center"
-        >
-          <div
-            class="text-6xl md:text-8xl leading-0 font-bold w-full text-hippie-blue"
-          >
-            2
-          </div>
-          <h3 class="font-semibold mt-4">Personalization</h3>
-          <p>Get a customized care plan designed to meet your unique needs.</p>
-        </div>
-        <div
-          class="step p-10 rounded-full aspect-square shadow-lg relative flex flex-col justify-center"
-        >
-          <div
-            class="text-6xl md:text-8xl leading-0 font-bold w-full text-hippie-blue"
-          >
-            3
-          </div>
-          <h3 class="font-semibold mt-4">Continuous Care</h3>
-          <p>
-            Access ongoing support and dynamic plan adjustments as your needs
-            evolve.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <section class="bg-matisse text-white py-12 md:py-24">
     <div class="container mx-auto px-4 text-center max-w-xl">
       <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold mb-6">
@@ -224,7 +171,7 @@ const lang = "pl";
         to make a lasting impact on global health.
       </p>
       <a
-        href="#contact-form"
+        href="mailto:contact@mends.eu"
         class="inline-block bg-rhino hover:bg-brandy text-white hover:text-rhino font-bold py-2 px-6 rounded-full transition duration-300"
       >
         Make an Impact
